# HashCrackChallenge

./: .clang-format  .gitignore  CMakeLists.txt  EncryptedPasswords.txt  LICENSE  README.md  build.sh  docker_builder.sh  docker_runner.sh
hash_cracker/: base64.cpp  base64.h  main.cpp  sha256.cpp
passwords_db/: discovered_passwords.txt
src/: BaseOperationsUtils.cpp  BaseOperationsUtils.h  CMakeLists.txt  CharPermutationsString.cpp  CharPermutationsString.h  GlobalDefintions.h  HashCracker.cpp  HashCracker.h  HashCrackerManager.cpp  HashCrackerManager.h  HashCrackerThread.cpp  HashCrackerThread.h  HashGenerator.cpp  HashGenerator.h  PollingScheduler.cpp  PollingScheduler.h  Statistics.cpp  Statistics.h  Thread.cpp  Thread.h  ThreadMessageIO.cpp  ThreadMessageIO.h  UiUtils.cpp  UiUtils.h  Utils.cpp  Utils.h  main.cpp
src/test/: CMakeLists.txt  unit.cpp
tools/docker/: Dockerfile
